[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Variant.gd" type="Script" id=1]
[ext_resource path="res://Assets/asdasd.png" type="Texture" id=2]
[ext_resource path="res://Assets/Edible.png" type="Texture" id=3]
[ext_resource path="res://Tr2n.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/Label.gd" type="Script" id=5]
[ext_resource path="res://Scenes/snake2.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/snake2.gd" type="Script" id=7]
[ext_resource path="res://Scenes/snake2b.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/snake2b.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Label2.gd" type="Script" id=10]
[ext_resource path="res://Assets/Gumbel_-_04_-_Levels.ogg" type="AudioStream" id=11]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 181.151

[sub_resource type="DynamicFont" id=3]
size = 26
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]
position = Vector2( 0.511848, -1.192 )
script = ExtResource( 1 )

[node name="Map_Boundaries" type="StaticBody2D" parent="."]
position = Vector2( 0, -1.19209e-007 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Map_Boundaries"]
polygon = PoolVector2Array( -7.7938, -3.50942, -8.96015, 20.9839, -91.1611, -46.8759, 1102.02, -62.7427, 1106.78, 665.54, -108.615, 663.954, -111.788, 3.8976, -5.48078, 21.351, -0.720771, 40.3911, -0.720771, 608.42, 7.21264, 600.487, 1022.68, 598.9, 1024.27, -2.4491 )

[node name="background" type="Sprite" parent="."]
position = Vector2( -0.850647, 4.75213 )
scale = Vector2( 0.892951, 0.928398 )
texture = ExtResource( 2 )
centered = false

[node name="cause why the fuck not" type="RigidBody2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 0, -1.19209e-007 )
physics_material_override = SubResource( 1 )
gravity_scale = 10.56
can_sleep = false
linear_velocity = Vector2( 1, 0 )
angular_velocity = 1.0
applied_force = Vector2( 1, 1 )

[node name="its a muddafuckin ball" type="Sprite" parent="cause why the fuck not"]
position = Vector2( 399.099, 178.6 )
scale = Vector2( 1.50534, 1.45339 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cause why the fuck not"]
position = Vector2( 399.029, 178.745 )
scale = Vector2( 0.05374, 0.0598104 )
shape = SubResource( 2 )

[node name="Score" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="Score"]
margin_right = 73.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 1, 0.890196, 0.890196, 1 )
text = "P1 Score: 0"
script = ExtResource( 5 )

[node name="snake2" parent="." instance=ExtResource( 6 )]
position = Vector2( 557.548, 583.197 )
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.14
autostart = true

[node name="snake2b" parent="." instance=ExtResource( 8 )]
position = Vector2( 475.105, 585.468 )
scale = Vector2( 0.999998, 1 )
script = ExtResource( 9 )

[node name="Score2" type="CanvasLayer" parent="."]

[node name="Label2" type="Label" parent="Score2"]
margin_left = 821.936
margin_top = 5.16943
margin_right = 1005.94
margin_bottom = 32.1694
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 1, 0.890196, 0.890196, 1 )
text = "P2 Score: 0"
script = ExtResource( 10 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
autoplay = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
